# comfy-ui-mcp

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/skills/release/: SKILL.md
docs/: comfyui-setup-guide.md  flux-inpainting-research.md
scripts/: download-icon-loras.py  test-create-mask.jsonl  test-fill-inpaint.jsonl  test-fill-slot.jsonl  test-inpaint.jsonl  test-loras-readback.jsonl  test-loras.jsonl  test-mask-inpaint.jsonl  test-metadata.jsonl  test-tools-list.jsonl
src/: comfy.rs  main.rs  mask.rs  mcp.rs  metadata.rs  setup.rs  tools.rs
wix/: main.wxs
