[package]
name = "comfy-ui-mcp"
version = "1.0.0"
edition = "2024"

[package.metadata.wix]
product-name = "ComfyUI MCP Server"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
dotenvy = "0.15"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
